frame/support/test/tests/pallet_ui/inconsistent_instance_1.stderr
error: Invalid generic declaration, trait is defined with instance but generic use none
  --> $DIR/inconsistent_instance_1.rs:16:7
   |
16 |     impl<T: Config> Pallet<T> {}
   |          ^

error: Invalid generic declaration, trait is defined with instance but generic use none
  --> $DIR/inconsistent_instance_1.rs:16:18
   |
16 |     impl<T: Config> Pallet<T> {}
   |                     ^^^^^^

error: Invalid generic declaration, trait is defined with instance but generic use none
  --> $DIR/inconsistent_instance_1.rs:10:20
   |
10 |     pub struct Pallet<T>(core::marker::PhantomData<T>);
   |                       ^

error: Invalid generic declaration, trait is defined with instance but generic use none
  --> $DIR/inconsistent_instance_1.rs:13:47
   |
13 |     impl<T: Config> Hooks<BlockNumberFor<T>> for Pallet<T> {}
   |                                                  ^^^^^^

error: Invalid generic declaration, trait is defined with instance but generic use none
  --> $DIR/inconsistent_instance_1.rs:13:7
   |
13 |     impl<T: Config> Hooks<BlockNumberFor<T>> for Pallet<T> {}
   |          ^
